# GUI

./: .gitignore  CMakeLists.txt  README.md
docs/: PLAN.md  RESEARCH.md  SPEC.md  WIDGET_LAYER.md
docs/mockups/: database_workspace.html
examples/smoke/: CMakeLists.txt  main.cpp  triangle_pipeline.cpp  triangle_pipeline.hpp
include/vlk_be_gui/: draw_data.hpp  error.hpp  frame_renderer.hpp  glfw_window.hpp  gui_renderer.hpp  layout.hpp  swapchain.hpp  vulkan_context.hpp
shaders/: gui.frag  gui.vert  triangle.vert
src/gui/: layout.cpp
src/platform/: glfw_window.cpp
src/vulkan/: frame_renderer.cpp  gui_renderer.cpp  swapchain.cpp  vulkan_context.cpp
tests/: CMakeLists.txt  draw_data_tests.cpp  layout_tests.cpp
